--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "cashplay",
+  "name": "cashplay-app",
   "version": "1.0.0",
-  "description": "",
-  "main": "SerpientesYEscaleras.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "build": "node init-db.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "express": "^5.1.0",
-    "socket.io": "^4.8.1"
+    "bcrypt": "^5.1.1",
+    "express": "^4.19.2",
+    "mysql2": "^3.15.0",
+    "pg": "^8.12.0",
+    "socket.io": "^4.7.5"
   }
 }
