--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.0",
     "pg": "^8.12.0",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "stripe": "^18.5.0"
   }
 }
